# AccessiSlides

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_IMPLEMENTATION.md  Start-AccessiSlides.bat  Start-AccessiSlides.command  cli.py  config.py  keystore.py  models.py  pyproject.toml
audit/: ledger.py  rollback.py  snapshot.py
checker/: engine.py  triage.py
checker/rules/: alt_text.py  complex_objects.py  contrast.py  contrast_image.py  generic_links.py  metadata.py  missing_title.py
docs/: README.md  _config.yml  index.html  index.md
fixer/: auto_fix.py  flag_manual.py  suggest_fix.py
llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py  prompts.py  service.py
report/: export_pdf.py  export_xlsx.py  interactive.py
tests/: test_contrast.py  test_contrast_image.py  test_keystore.py  test_llm.py  test_smoke.py  test_web.py
utils/: color.py  logging.py  pptx_xml.py
web/: __init__.py  jobs.py  server.py
web/static/: index.html
